# nxp-zsdk

./: Kconfig.nxp  README.md  SW-Content-Register.txt  west.yml
doc/: CMakeLists.txt  Getting-Started.md  Introduction-to-ZSDK-Downstream.md  index.rst  versions.json
doc/_static/: custom.css
doc/releases/: Board-Support-Status.md  index.rst  release-notes-nxp-zsdk-v3.7.0.txt  release-notes-nxp-zsdk-v4.0.0.txt  release-notes-nxp-zsdk-v4.1.0.txt  release-notes-nxp-zsdk-v4.2.0.txt  release-notes-nxp-zsdk-v4.3.0.txt  release-notes-nxp-zsdk-v4.4.0.txt
doc/scripts/_utils/: utils.py
doc/wireless/: index.rst
doc/wireless/release-notes/: wireless-release-notes.md
doc/wireless/release-notes/topics/: 802_15_4_radio_features.md  abbreviations.md  about_this_document.md  bluetooth_radio_features.md  feature_difference_between_zephyr_upstream_and_nxp.md  iw416_release_notes.md  iw610_release_notes.md  iw611iw612_release_notes.md  references.md  rw610rw612_release_notes.md  wi-fi_and_bluetooth802154_coexistence_features.md  wi-fi_radio_features.md
doc/wireless/user-manuals/Wake_On_BT_User_Guide_for_Zephyr/: Wake_On_BT_User_Guide_for_Zephyr.md
doc/wireless/user-manuals/Wi-Fi_Bluetooth_and_Thread_User_Manual_for_Zephyr/: Wi-Fi_Bluetooth_and_Thread_User_Manual_for_Zephyr.md
doc/wireless/user-manuals/Wi-Fi_Bluetooth_and_Thread_User_Manual_for_Zephyr/topics/: Bluetooth_examples_and_commands.md  Coexistence_examples_and_commands.md  Introduction.md  MFG_bridge_example.md  Wi-Fi_examples_and_commands.md
doc/wireless/user-manuals/getting-started-IW416-i.MXRT1060/: getting-started-iw416-imxrt1060.md
doc/wireless/user-manuals/getting-started-IW416-i.MXRT1060/topics/: build_and_flash_examples.md  build_and_flash_in_ubuntu.md  build_and_flash_in_windows.md  build_and_flash_in_windows_vsc.md  hardware_setup.md  introduction.md  run_bluetooth_shell_example.md  run_coexistence_shell_example.md  run_wi-fi_shell_example.md  software_setup.md  software_setup_for_ubuntu.md  software_setup_for_windows.md  software_setup_for_windows_vsc.md
doc/wireless/user-manuals/getting-started-IW610-i.MXRT1060/: getting-started-iw610-imxrt1060.md
doc/wireless/user-manuals/getting-started-IW610-i.MXRT1060/topics/: build_and_flash_examples.md  build_and_flash_in_ubuntu.md  build_and_flash_in_windows.md  build_and_flash_in_windows_vsc.md  hardware_setup.md  introduction.md  run_bluetooth_shell_example.md  run_coexistence_shell_example.md  run_wi-fi_shell_example.md  software_setup.md  software_setup_for_ubuntu.md  software_setup_for_windows.md  software_setup_for_windows_vsc.md
doc/wireless/user-manuals/getting-started-IW612-i.MXRT1060/: getting-started-iw612-imxrt1060.md
doc/wireless/user-manuals/getting-started-IW612-i.MXRT1060/topics/: build_and_flash_examples.md  build_and_flash_in_ubuntu.md  build_and_flash_in_windows.md  build_and_flash_in_windows_vsc.md  hardware_setup.md  introduction.md  run_bluetooth_shell_example.md  run_coexistence_shell_example.md  run_wi-fi_shell_example.md  software_setup.md  software_setup_for_ubuntu.md  software_setup_for_windows.md  software_setup_for_windows_vsc.md
doc/wireless/user-manuals/getting-started-RW612/: getting-started-RW612.md
doc/wireless/user-manuals/getting-started-RW612/topics/: build_and_flash_examples.md  build_and_flash_in_ubuntu.md  build_and_flash_in_windows.md  build_and_flash_in_windows_vsc.md  hardware_setup.md  introduction.md  run_bluetooth_shell_example.md  run_coexistence_shell_example.md  run_wi-fi_shell_example.md  software_setup.md  software_setup_for_ubuntu.md  software_setup_for_windows.md  software_setup_for_windows_vsc.md
doc/zephyr/: conf.py
doc/zsdk/: conf.py
modules/nxp-openthread-vendor/: CMakeLists.txt  Kconfig
modules/nxp-openthread-vendor/src/: nxp_vendor_cli.cpp  nxp_vendor_commands.hpp  nxp_vendor_spinel.cpp  nxp_vendor_spinel.h  nxp_vendor_types.h
modules/nxp-openthread-vendor/zephyr/: module.yml
samples/crypto/nxp_els_pkc/: Kconfig  sample.yaml
samples/crypto/nxp_els_pkc/src/: main.c
samples/crypto/nxp_mbedtls_configs/: mcux_mbedtls_accelerator_config.h  mcux_mbedtls_config.h  mcux_psa_defines.h
samples/crypto/nxp_mbedtls_psa_crypto/: README.rst  prj.conf  sample.yaml
samples/crypto/nxp_mbedtls_psa_crypto/src/: main.c
samples/crypto/nxp_mbedtls_psa_crypto_opaque/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/crypto/nxp_mbedtls_psa_crypto_opaque/src/: main.c
samples/nxp_mfg_bridge/: CMakeLists.txt  Kconfig  overlay_IW416.conf  overlay_IW610.conf  overlay_IW612.conf  overlay_RW612.conf  prj.conf  sample.yaml
samples/nxp_mfg_bridge/boards/: mimxrt1060_evk_mimxrt1062_qspi_C.overlay
samples/nxp_mfg_bridge/src/: main.c  uart_rtos.c  uart_rtos.h
samples/wireless/coex/a2dp_sink/: CMakeLists.txt  Kconfig  overlay-wifi-nxp-hosted-mcu.conf  overlay_a2dp_sink_fix.conf
samples/wireless/coex/bap_unicast_client/: CMakeLists.txt
samples/wireless/coex/bap_unicast_server/: CMakeLists.txt
samples/wireless/coex/central_ht/: README.rst  overlay-ot-host-rcp-nxp.conf  overlay-wifi-nxp-coex.conf  overlay-wifi-nxp-hostap-hosted-mcu.conf  prj.conf
samples/wireless/coex/pbp_public_broadcast_sink/: CMakeLists.txt  overlay-wifi-nxp-hosted-mcu.conf
samples/wireless/coex/pbp_public_broadcast_source/: CMakeLists.txt
samples/wireless/coex/peripheral_ht/: Kconfig  README.rst  overlay-ot-host-rcp-nxp.conf  overlay-wifi-nxp-hostap-hosted-mcu.conf  overlay-wifi-nxp-hostap.conf  overlay-wifi-nxp-iw610.conf  overlay-wifi-nxp.conf
samples/wireless/coex/shell/: CMakeLists.txt  Kconfig  README.rst  overlay-wifi-nxp-hostap-hosted-mcu.conf  overlay-wifi-nxp-hostap.conf  overlay-wifi-nxp-hosted-mcu.conf  overlay-wifi-nxp-iw610.conf  overlay-wifi-nxp.conf  prj.conf
samples/wireless/shell/: ReadMe.md  overlay-mcxw7x.conf  overlay_nxp_vendor.conf
samples/wireless/shell_nxp_vendor_commands_extension/: CMakeLists.txt  ReadMe.md  overlay_nxp_vendor.conf
samples/wireless/shell_nxp_vendor_commands_extension/src/: nxp_vendor_commands.cpp  nxp_vendor_spinel.cpp
zephyr/: module.yml
(+8 files in other folders)
